--- a/SwipeSelectingCollectionView.xcodeproj/xcshareddata/xcschemes/SwipeSelectingCollectionView-Package.xcscheme
+++ b/SwipeSelectingCollectionView.xcodeproj/xcshareddata/xcschemes/SwipeSelectingCollectionView-Package.xcscheme
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "OBJ_14"
+               BlueprintIdentifier = "SwipeSelectingCollectionView::SwipeSelectingCollectionView"
                BuildableName = "SwipeSelectingCollectionView.framework"
                BlueprintName = "SwipeSelectingCollectionView"
                ReferencedContainer = "container:SwipeSelectingCollectionView.xcodeproj">
@@ -29,8 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -42,17 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "OBJ_14"
-            BuildableName = "SwipeSelectingCollectionView.framework"
-            BlueprintName = "SwipeSelectingCollectionView"
-            ReferencedContainer = "container:SwipeSelectingCollectionView.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
